--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,6 +2,122 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Start Apercu font definitions */
+
+@font-face {
+  font-family: 'Apercu';
+  src: url('/fonts/apercu-black-italic-trial.otf');
+  font-weight: 900;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Apercu';
+  src: url('/fonts/apercu-black-trial.otf');
+  font-weight: 900;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Apercu';
+  src: url('/fonts/apercu-bold-italic-trial.otf');
+  font-weight: 700;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Apercu';
+  src: url('/fonts/apercu-bold-trial.otf');
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Apercu';
+  src: url('/fonts/apercu-extrabold-italic-trial.otf');
+  font-weight: 800;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Apercu';
+  src: url('/fonts/apercu-extrabold-trial.otf');
+  font-weight: 800;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Apercu';
+  src: url('/fonts/apercu-extralight-italic-trial.otf');
+  font-weight: 200;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Apercu';
+  src: url('/fonts/apercu-extralight-trial.otf');
+  font-weight: 200;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Apercu';
+  src: url('/fonts/apercu-italic-trial.otf');
+  font-weight: normal;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Apercu';
+  src: url('/fonts/apercu-light-italic-trial.otf');
+  font-weight: 300;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Apercu';
+  src: url('/fonts/apercu-light-trial.otf');
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Apercu';
+  src: url('/fonts/apercu-medium-italic-trial.otf');
+  font-weight: 500;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Apercu';
+  src: url('/fonts/apercu-medium-trial.otf');
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Apercu';
+  src: url('/fonts/apercu-regular-trial.otf');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Apercu';
+  src: url('/fonts/apercu-thin-italic-trial.otf');
+  font-weight: 100;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Apercu';
+  src: url('/fonts/apercu-thin-trial.otf');
+  font-weight: 100;
+  font-style: normal;
+}
+
+/* End Apercu font definitions */
+
 html {
   scroll-behavior: smooth;
   scroll-padding: 10vh;
