--- a/styles/styles.css
+++ b/styles/styles.css
@@ -137,13 +137,17 @@ script[type='application/ld+json'] {
   position: absolute;
   inset: 0;
   outline: 3px dashed rgba(65, 105, 225, 1);
-  outline-offset: -4px;
+  outline-offset: -2px;
   transition: opacity 0.25s;
   z-index: 999;
 }
 
 .preview-highlight-open:not(.absolute) {
   position: relative;
+}
+
+.preview-highlight-open .preview-edit-button {
+  display: none !important;
 }
 
 /* Fancybox */
