--- a/styles/styles.css
+++ b/styles/styles.css
@@ -150,7 +150,7 @@ script[type='application/ld+json'] {
   position: relative;
 }
 
-.preview-highlight-open .preview-edit-button {
+.preview-highlight-open .preview-block-edit-button {
   display: none !important;
 }
 
