--- a/styles/styles.css
+++ b/styles/styles.css
@@ -166,3 +166,7 @@ script[type='application/ld+json'] {
 .title .list-check {
   padding-left: 1.5em;
 }
+
+[data-aos="fade-up-sm"] {
+  transform: translate3d(0, 6px, 0);
+}
