--- a/styles/styles.css
+++ b/styles/styles.css
@@ -172,6 +172,7 @@ script[type='application/ld+json'] {
 
 [data-animate] {
   opacity: 0;
+  transform: translateZ(0);
   transition-duration: 400ms;
   transition-timing-function: cubic-bezier(0.25, 0.46, 0.45, 0.94);
   transition-property: opacity, transform;
@@ -216,21 +217,6 @@ script[type='application/ld+json'] {
 [data-no-animate="true"] [data-animate] {
   opacity: 1;
   transform: none;
-}
-
-/* make sure everything is in view within 5 seconds */
-@keyframes inview-animate-failsafe {
-  to {
-    opacity: 1;
-    transform: none;
-  }
-}
-
-[data-inview="true"] [data-animate] {
-  animation-name: inview-animate-failsafe;
-  animation-duration: 0s;
-  animation-fill-mode: forwards;
-  animation-delay: 5s;
 }
 
 /* delays */
